--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11502,6 +11502,42 @@ groups:
         - ch.alias.run2
         - ch.alias.run1
         - ch.alias.run0
+  fanficc04a7d03584c4891a72cc97f76d81eb6:
+    inheritance:
+    - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.fanficchatcolor
+        - ch.alias.fanficname
+        - ch.alias.fanficlaser
+        - ch.alias.jump2
+        - ch.alias.jump1
+        - ch.alias.jump0
+        - ch.alias.haste2
+        - ch.alias.haste1
+        - ch.alias.haste0
+        - ch.alias.run2
+        - ch.alias.run1
+        - ch.alias.run0
+  fanficba08a8ba63344dd998c642515bb7fe44:
+    inheritance:
+    - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.fanficchatcolor
+        - ch.alias.fanficname
+        - ch.alias.fanficlaser
+        - ch.alias.jump2
+        - ch.alias.jump1
+        - ch.alias.jump0
+        - ch.alias.haste2
+        - ch.alias.haste1
+        - ch.alias.haste0
+        - ch.alias.run2
+        - ch.alias.run1
+        - ch.alias.run0
 schema-version: 1
 users:
   001b0b15-2f00-4ce1-acff-577e465cb175:
@@ -11901,7 +11937,6 @@ users:
     options:
       name: Brettconk
     permissions:
-    - multiverse.access.policeoffice
     - multiverse.access.underworld
     worlds:
       greenfield:
@@ -13596,7 +13631,7 @@ users:
     - multiverse.access.underworld
   37795e4b-c31c-458d-a2c9-eb0aaf6060a7:
     group:
-    - impulsebartallen
+    - flashbarryallen
     options:
       name: TheFla5h
     worlds:
@@ -14548,9 +14583,9 @@ users:
       name: ItsaSteampunk_
   4f9ba6ae-950b-43ed-8de6-5fb7315ef8a6:
     group:
-    - beastboy
+    - mortal
     options:
-      name: TijgerDavy
+      name: SnapCat101
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
     group:
     - supergirl
@@ -15953,7 +15988,7 @@ users:
     group:
     - martianmanhunter
     options:
-      name: Deoxys_S
+      name: XxRedzEyeGamerxX
     permissions: []
   76bacf6b-5dbb-498e-b4fb-9435b5a4e22d:
     group:
@@ -16056,7 +16091,7 @@ users:
     group:
     - martianmanhunter
     options:
-      name: HomeBoy333
+      name: williamo9
     permissions: []
     worlds:
       fightclub:
@@ -16270,7 +16305,7 @@ users:
       name: Emilysquid13
   7dff91dd-96e6-4b73-9dfa-17992e055694:
     group:
-    - flashwallywest
+    - mortal
     options:
       name: _TreyCode_
     worlds:
@@ -17523,7 +17558,7 @@ users:
       name: NightlyTrooper
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group:
-    - ultron
+    - infinitysilversurfer
     options:
       name: MichaelKieu
     permissions:
@@ -17888,7 +17923,7 @@ users:
       name: destroyer917
   aa2484d4-ce5d-4aba-9604-1cd10f03cb32:
     group:
-    - carnage
+    - emmafrost
     options:
       name: _Spaces_
   aa5a230a-0b78-4218-a925-7e76b5f451d5:
@@ -20539,7 +20574,7 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - zeus
+    - professorx
     options:
       name: ___Entity_303___
     permissions:
@@ -21625,7 +21660,7 @@ users:
       name: paddy_wack
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group:
-    - savitar
+    - atom
     options:
       name: Viibe_
     worlds:
@@ -22250,7 +22285,7 @@ users:
     permissions: []
   77d4cc3f-5108-42bb-ae7c-03cfa5d4b72e:
     group:
-    - godspeed
+    - blackracerwilliewalker
     options:
       name: TheElementalWolf
     worlds:
@@ -23078,7 +23113,7 @@ users:
     - multiverse.access.policeoffice
   af718767-3599-4c36-8b74-1b3d1114ba0c:
     group:
-    - impossibleman
+    - mortal
     options:
       name: AustinTheSlime
   655d4d4b-a171-4a15-aed3-1a3433a6763f:
@@ -23216,7 +23251,7 @@ users:
       name: Shiniistu
   751c1926-25d5-43e6-9d39-728bcf116659:
     group:
-    - mortal
+    - wonderwomangodmode
     options:
       name: EliteInfinityYT
   4b367982-ddaf-4b9c-8d72-be29dc5bc965:
@@ -23226,7 +23261,7 @@ users:
       name: Snoopydoggee
   c04a7d03-584c-4891-a72c-c97f76d81eb6:
     group:
-    - magneto
+    - yellowlanternbatman
     options:
       name: AiDsAcquired
   11756a9f-3be2-48ce-b216-310f09390b01:
@@ -23482,7 +23517,7 @@ users:
       name: mastermestre1
   2d5f57e6-5c4e-46c6-9ac3-431659b079ff:
     group:
-    - blackracerwilliewalker
+    - zoom
     options:
       name: Garniashade
     permissions: []
@@ -23539,7 +23574,7 @@ users:
       name: Langholm
   4465f61d-06a5-4de2-a53d-e767b90592f8:
     group:
-    - flashbarryallen
+    - firestormraymondstein
     options:
       name: ImVLegend
     worlds:
@@ -23577,7 +23612,7 @@ users:
       name: masongreenman
   605de075-3675-4cd8-b91c-3a0a9e9bf0f4:
     group:
-    - bluelanternbarryallen
+    - reverseflasheobardthawne
     worlds:
       greenfield:
         permissions: []
@@ -23595,6 +23630,49 @@ users:
     - starsapphirecarolferris
     options:
       name: sugerush
+  9834339f-f16d-46b3-9ba3-fe0c95ad9741:
+    group:
+    - reverseflasheobardthawne
+    options:
+      name: Heisenwhite
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
+  577a319a-9dd5-494e-8b54-529752c88dc5:
+    group:
+    - flashbartallen
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
+    options:
+      name: Amulet_Boy
+  a93be9a8-7dde-41c5-acef-3198efa61bc5:
+    group:
+    - flashwallywest
+    options:
+      name: shadowlink360
+  ba08a8ba-6334-4dd9-98c6-42515bb7fe44:
+    group:
+    - dannyphantom
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
+    options:
+      name: KCetel
+  1b9f3a14-c0ee-4d0b-94e7-e0c37b0256c7:
+    group:
+    - superboykalel
+    options:
+      name: enderwolfBeeCee
+  fafa1313-6c0f-4db5-a16d-673d34b2d80d:
+    group:
+    - ninjagozane
+    options:
+      name: Gamingplaz
 worlds:
   checkers:
     inheritance:
