--- a/WorldGuard/worlds/overvoid/regions.yml
+++ b/WorldGuard/worlds/overvoid/regions.yml
@@ -38,7 +38,7 @@ regions:
         priority: 0
     __global__:
         members: {}
-        flags: {invincible: allow, interact: allow}
+        flags: {item-drop: deny, invincible: allow, interact: allow}
         owners: {}
         type: global
         priority: 0
