--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -33,8 +33,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: default
-    world: greenfield
+    group: spawn
+    world: spawn
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: greenfield
     group: default
@@ -66,7 +66,7 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: greenfield
+    world: survival
     group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
@@ -87,8 +87,8 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: overvoid
-    group: overvoid
+    world: greenfield
+    group: default
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: overvoid
     group: overvoid
@@ -136,7 +136,7 @@ v2-logout:
     world: speedforce
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group: default
-    world: survival_nether
+    world: greenfield
   e0fc9cdc-59e8-4f9d-bc86-20648906953e:
     group: default
     world: greenfield
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: overvoid
-    group: overvoid
+    world: greenfield
+    group: default
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
     world: greenfield
@@ -201,8 +201,8 @@ v2-logout:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: escaperoom
-    group: escaperoom
+    world: policeoffice
+    group: policeoffice
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -402,8 +402,8 @@ v2-logout:
     group: default
     world: greenfield
   a8185de3-b053-4aca-9eb6-d98728e476ad:
-    world: spleeflobby
-    group: spleeflobby
+    world: greenfield
+    group: default
   03bd377c-eb0d-4e84-b733-e27fd9a954b1:
     group: default
     world: greenfield
@@ -881,8 +881,8 @@ v2-logout:
     group: default
     world: greenfield
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
-    world: greenfield
-    group: default
+    world: elytrahard
+    group: elytrahard
   f310e030-27e8-4f04-b99e-551f89f2d2d4:
     group: spawn
     world: spawn
@@ -1194,7 +1194,7 @@ v2-logout:
     world: greenfield
   37795e4b-c31c-458d-a2c9-eb0aaf6060a7:
     group: default
-    world: infinitycity
+    world: greenfield
   25067289-fa55-4f45-9b63-9fc5949b4696:
     group: default
     world: greenfield
@@ -1379,8 +1379,8 @@ v2-logout:
     group: default
     world: survival
   5da26092-c807-4c9b-8d08-9523f74ddc97:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
     group: default
     world: greenfield
@@ -2447,7 +2447,7 @@ v2-logout:
     world: survival
   af718767-3599-4c36-8b74-1b3d1114ba0c:
     group: default
-    world: survival
+    world: greenfield
   8eff01f6-eb51-49bd-bec4-d49dd5e93908:
     group: default
     world: survival
@@ -2797,8 +2797,8 @@ v2-logout:
     group: default
     world: greenfield
   4465f61d-06a5-4de2-a53d-e767b90592f8:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   300a7156-107a-4710-ad9b-fcd9f64dd993:
     group: default
     world: greenfield
@@ -2826,3 +2826,27 @@ v2-logout:
   013f146f-9cc1-4e4c-9208-d6f2a6a8005a:
     group: lavahop
     world: lavahop
+  9834339f-f16d-46b3-9ba3-fe0c95ad9741:
+    group: default
+    world: infinitycity
+  577a319a-9dd5-494e-8b54-529752c88dc5:
+    group: speedforce
+    world: speedforce
+  a93be9a8-7dde-41c5-acef-3198efa61bc5:
+    group: default
+    world: greenfield
+  1b9f3a14-c0ee-4d0b-94e7-e0c37b0256c7:
+    group: default
+    world: greenfield
+  ba08a8ba-6334-4dd9-98c6-42515bb7fe44:
+    group: default
+    world: greenfield
+  f47331bd-da68-42e8-9153-591b12c920da:
+    group: spawn
+    world: spawn
+  aa2484d4-ce5d-4aba-9604-1cd10f03cb32:
+    group: default
+    world: greenfield
+  fafa1313-6c0f-4db5-a16d-673d34b2d80d:
+    group: default
+    world: survival
