--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -23173,7 +23173,7 @@ users:
       name: autokai144844
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
     group:
-    - firestormraymondstein
+    - silversurfer
     worlds:
       greenfield:
         permissions: []
