--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,23 +1,36 @@
 groups:
-  speeddemon: 
-     inheritance: 
-     - commonherotraits 
-     options: 
-       prefix: '&6S&4pee&6d &6D&1emo&6n' 
-       suffix: '&b' 
-     worlds: 
-       survival: 
-         permissions: 
-         - ch.alias.run0
-         - ch.alias.run1
-         - ch.alias.run2
-         - ch.alias.run3
-         - ch.alias.run4
-         - ch.alias.run5
-         - ch.alias.run6
-         - ch.alias.run7
-         - ch.alias.run8
-         - ch.alias.run9
+  electro:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Ele&bc&etro'
+      suffix: '&b'
+    worlds:
+      survival:
+        permissions:
+        - essentials.fly
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+  speeddemon:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&6S&4pee&6d &6D&1emo&6n'
+      suffix: '&b'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.run7
+        - ch.alias.run8
+        - ch.alias.run9
   3dmanchuckandhal:
     inheritance:
     - commonherotraits
@@ -16770,7 +16783,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - criminal
+    - speeddemon
     options:
       name: God_Doesnt_Exist
       prefix: ''
