--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11669,7 +11669,7 @@ users:
       name: NetherAssassin
   0286f57a-4c57-4be9-af73-ac76f88b23cd:
     group:
-    - mystique
+    - blackflash
     options:
       name: devil_spike
     worlds:
@@ -12239,7 +12239,7 @@ users:
       name: basketballer08
   10890e45-8dfa-4669-820a-5a303d86c237:
     group:
-    - martianmanhunter
+    - quicksilver
     options:
       name: GS501
   108b7046-ddfb-40c1-a3a3-612b055d466b:
@@ -15427,7 +15427,7 @@ users:
       name: Blaze_pvp
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - gothamman
+    - firestormraymondstein
     options:
       name: NinjagoGamer_MCU
     permissions: []
@@ -16783,7 +16783,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - speeddemon
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -20606,7 +20606,7 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - professorx
+    - superboykonel
     options:
       name: ___Entity_303___
     permissions:
@@ -20995,7 +20995,7 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - officer
+    - electro
     options:
       name: mythguy1226
     permissions:
@@ -23488,7 +23488,7 @@ users:
       name: Adrihan2004
   3e886f37-7d3c-41bf-9d19-eaedba03627f:
     group:
-    - impulsebartallen
+    - martianmanhunter
     options:
       name: AccioCookiez
     worlds:
@@ -23606,7 +23606,7 @@ users:
       name: Langholm
   4465f61d-06a5-4de2-a53d-e767b90592f8:
     group:
-    - firestormraymondstein
+    - mortal
     options:
       name: ImVLegend
     worlds:
@@ -23644,12 +23644,11 @@ users:
       name: masongreenman
   605de075-3675-4cd8-b91c-3a0a9e9bf0f4:
     group:
-    - reverseflasheobardthawne
+    - darthrevan
     worlds:
       greenfield:
         permissions: []
-    permissions:
-    - multiverse.access.policeoffice
+    permissions: []
     options:
       name: Firephoenix0254
   c89c0df2-a49f-49a5-9a59-54f0c02ab5ee:
@@ -23705,6 +23704,9 @@ users:
     - ninjagozane
     options:
       name: Gamingplaz
+  fa2bfc88-fd93-419a-bbc9-f8721ee77744:
+    group:
+    - superman
 worlds:
   checkers:
     inheritance:
