--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: greenfield
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: policeoffice
-    group: policeoffice
+    world: greenfield
+    group: default
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: greenfield
     group: default
@@ -87,7 +87,7 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: greenfield
+    world: survival
     group: default
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: overvoid
@@ -463,7 +463,7 @@ v2-logout:
     world: plots
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group: default
-    world: survival_nether
+    world: survival
   9d377ef9-97f1-4f4f-bfec-964323713cbe:
     group: default
     world: survival
@@ -881,8 +881,8 @@ v2-logout:
     group: default
     world: greenfield
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
-    world: elytrahard
-    group: elytrahard
+    world: greenfield
+    group: default
   f310e030-27e8-4f04-b99e-551f89f2d2d4:
     group: spawn
     world: spawn
@@ -1379,8 +1379,8 @@ v2-logout:
     group: default
     world: survival
   5da26092-c807-4c9b-8d08-9523f74ddc97:
-    group: default
-    world: greenfield
+    group: policeoffice
+    world: policeoffice
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
     group: default
     world: greenfield
@@ -2833,8 +2833,8 @@ v2-logout:
     group: speedforce
     world: speedforce
   a93be9a8-7dde-41c5-acef-3198efa61bc5:
-    group: default
-    world: greenfield
+    group: speedforce
+    world: speedforce
   1b9f3a14-c0ee-4d0b-94e7-e0c37b0256c7:
     group: default
     world: greenfield
@@ -2850,3 +2850,9 @@ v2-logout:
   fafa1313-6c0f-4db5-a16d-673d34b2d80d:
     group: default
     world: survival
+  10890e45-8dfa-4669-820a-5a303d86c237:
+    group: default
+    world: greenfield
+  3c87ea83-ff4c-474d-b10d-4a7fc1a92639:
+    group: default
+    world: greenfield
