--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12763,7 +12763,7 @@ users:
       name: Dexeol
   1eb16884-6f98-4d40-8ba9-18fd7927d3aa:
     options:
-      name: MCExilityZ
+      name: 303IWatchYou303
     worlds:
       fightclub:
         permissions: []
@@ -14111,10 +14111,11 @@ users:
     permissions: []
   4220f479-2a13-48c6-82a4-58f37008b5d2:
     group:
-    - kira
+    - ares
     options:
       name: Bulldogbuilders
     permissions:
+    - multiverse.access.policeoffice
     - is.secretary
     - essentials.warps.office
     - essentials.warps.officeadmin
@@ -16018,7 +16019,7 @@ users:
       name: RPMGaming
   7673749d-9598-4466-a255-444221041552:
     group:
-    - martianmanhunter
+    - godspeed
     options:
       name: XxRedzEyeGamerxX
     permissions: []
@@ -17875,7 +17876,7 @@ users:
       name: grimreaper0202
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - kidflashwallywest
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -20606,11 +20607,10 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - superboykonel
+    - bluelanternsaintwalker
     options:
       name: ___Entity_303___
     permissions:
-    - change.chat
     - multiverse.access.policeoffice
     worlds:
       greenfield:
@@ -20995,7 +20995,7 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - electro
+    - venom
     options:
       name: mythguy1226
     permissions:
@@ -23205,7 +23205,7 @@ users:
       name: autokai144844
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
     group:
-    - silversurfer
+    - inertiathaddeusthawneii
     worlds:
       greenfield:
         permissions: []
@@ -23644,7 +23644,7 @@ users:
       name: masongreenman
   605de075-3675-4cd8-b91c-3a0a9e9bf0f4:
     group:
-    - darthrevan
+    - godspeed
     worlds:
       greenfield:
         permissions: []
@@ -23686,7 +23686,7 @@ users:
       name: shadowlink360
   ba08a8ba-6334-4dd9-98c6-42515bb7fe44:
     group:
-    - dannyphantom
+    - ghostriderjohnnyblaze
     worlds:
       greenfield:
         permissions: []
@@ -23707,6 +23707,19 @@ users:
   fa2bfc88-fd93-419a-bbc9-f8721ee77744:
     group:
     - superman
+    options:
+      name: KidWarrior1000
+  5dbf795f-6d7f-4b5f-bb44-2f79ee0547fe:
+    group:
+    - flashbarryallen
+  c606bb17-d2f8-4b9e-a670-4e2a0f7c9956:
+    group:
+    - onepunchman
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: Batkidd79
 worlds:
   checkers:
     inheritance:
