--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -33,8 +33,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: greenfield
     group: default
@@ -793,7 +793,7 @@ v2-logout:
     world: survival
   8ae48244-2f6d-4443-8b3e-90178f08e68d:
     group: default
-    world: greenfield
+    world: infinitycity
   64572c10-48af-4f46-a706-aef5a6248140:
     group: default
     world: greenfield
@@ -1845,7 +1845,7 @@ v2-logout:
     world: greenfield
   7673749d-9598-4466-a255-444221041552:
     group: default
-    world: greenfield
+    world: survival
   412f983d-ecaa-402a-9a04-a65a00a95d8d:
     group: default
     world: greenfield
@@ -2693,7 +2693,7 @@ v2-logout:
     world: greenfield
   3e886f37-7d3c-41bf-9d19-eaedba03627f:
     group: default
-    world: greenfield
+    world: survival
   75c15929-2043-4aab-941f-38336edf47e2:
     group: default
     world: greenfield
@@ -2854,5 +2854,14 @@ v2-logout:
     group: default
     world: greenfield
   3c87ea83-ff4c-474d-b10d-4a7fc1a92639:
+    group: default
+    world: greenfield
+  fa2bfc88-fd93-419a-bbc9-f8721ee77744:
+    group: default
+    world: survival
+  c606bb17-d2f8-4b9e-a670-4e2a0f7c9956:
+    group: default
+    world: greenfield
+  1eb16884-6f98-4d40-8ba9-18fd7927d3aa:
     group: default
     world: greenfield
