--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -58,6 +58,9 @@ players:
   ae9341b2-c58a-4c51-8ada-c9ca4d47aad4:
     party: SamTDE
     rank: 20
+  fbb8c072-4c4b-49c8-948b-26e8ad73099e:
+    party: Enchantt
+    rank: 5
 parties:
   anti:
     leader: 34a87619-4b40-4ae8-b759-3efa25bbbffd
@@ -98,6 +101,7 @@ parties:
     members:
     - 28556dea-667d-409f-b2ff-fb4177a20ff2
     - 4ff867f5-6cab-413e-9fad-e4d77ca48778
+    - fbb8c072-4c4b-49c8-948b-26e8ad73099e
   Chat:
     leader: 66edaf7d-94e7-44cf-9d99-34d3ad90594e
     members:
