--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8778,6 +8778,7 @@ groups:
       survival:
         permissions:
         - powers.wallrun
+        - ch.alias.reverseflashdanielwest
         - ch.alias.speedforceteleport
         - ch.alias.vibrate
         - ch.alias.dismountplayer
