--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8778,6 +8778,7 @@ groups:
       survival:
         permissions:
         - powers.wallrun
+        - worldedit.navigation.thru.command
         - ch.alias.reverseflashdanielwest
         - ch.alias.speedforceteleport
         - ch.alias.vibrate
@@ -8805,6 +8806,8 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
+        - ch.alias.lightning
+        - ch.alias.ma
   rmika:
     inheritance:
     - commonherotraits
