--- a/CommandHelper/heromachine.yml
+++ b/CommandHelper/heromachine.yml
@@ -1,5 +1,5 @@
 storage:
   heromachine: {bottomleft2: '0', bottomleft3: '1', topleft1: '3', topleft2: '8',
-    topleft3: '0', topmiddle3: '"1"', topright3: '"0"', topmiddle2: '"5"', topright2: '"1"',
+    topleft3: '0', topmiddle3: '"1"', topright3: '"0"', topmiddle2: '4', topright2: '"1"',
     topright1: '"9"', bottommiddle1: '8', bottommiddle2: '9', bottommiddle3: '1',
-    bottomleft1: '6', bottomright3: '1', topmiddle1: '"6"', bottomright1: '2', bottomright2: '5'}
+    bottomleft1: '6', bottomright3: '1', topmiddle1: '5', bottomright1: '2', bottomright2: '5'}
