--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,5 +1,18 @@
 groups:
-  speeddemon:
+  electro:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Ele&bc&etro'
+      suffix: '&b'
+    worlds:
+      survival:
+        permissions:
+        - essentials.fly
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+    speeddemon:
     inheritance:
     - commonherotraits
     options:
