--- a/CommandHelper/heromachine.yml
+++ b/CommandHelper/heromachine.yml
@@ -1,5 +1,5 @@
 storage:
-  heromachine: {bottomleft2: '5', bottomleft3: '1', topleft1: '0', topleft2: '5',
-    topleft3: '2', topmiddle3: '3', topright3: '"0"', topmiddle2: '0', topright2: '0',
-    topright1: '"9"', bottommiddle1: '2', bottommiddle2: '5', bottommiddle3: '0',
-    bottomleft1: '6', bottomright3: '1', topmiddle1: '6', bottomright1: '2', bottomright2: '5'}
+  heromachine: {bottomleft2: '9', bottomleft3: '0', topleft1: '7', topleft2: '2',
+    topleft3: '0', topmiddle3: '0', topright3: '0', topmiddle2: '2', topright2: '4',
+    topright1: '4', bottommiddle1: '0', bottommiddle2: '3', bottommiddle3: '2', bottomleft1: '7',
+    bottomright3: '3', topmiddle1: '6', bottomright1: '0', bottomright2: '5'}
