--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -200,8 +200,8 @@ v2-logout:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -620,8 +620,8 @@ v2-logout:
     group: default
     world: survival
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
-    world: greenfield
-    group: default
+    world: plots
+    group: plots
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: spawn
     world: spawn
@@ -880,8 +880,8 @@ v2-logout:
     group: default
     world: greenfield
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
-    world: greenfield
-    group: default
+    world: overvoid
+    group: overvoid
   f310e030-27e8-4f04-b99e-551f89f2d2d4:
     group: spawn
     world: spawn
@@ -1378,8 +1378,8 @@ v2-logout:
     group: default
     world: survival
   5da26092-c807-4c9b-8d08-9523f74ddc97:
-    world: plots
-    group: plots
+    world: greenfield
+    group: default
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
     group: default
     world: greenfield
@@ -3011,3 +3011,9 @@ v2-logout:
   2ea37067-83fa-4638-956b-7f1c4fef54b4:
     group: spawn
     world: spawn
+  b9d1252a-2168-4dc0-bae1-5eb06bc09ff7:
+    group: default
+    world: greenfield
+  d0b35aee-f6af-44ff-84ed-6342e8370492:
+    group: default
+    world: greenfield
