--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -944,6 +944,7 @@ groups:
         - libsdisguises.disguise.spider.-setinvisible
         - libsdisguises.disguise.squid.-setinvisible
         - libsdisguises.disguise.undead_horse.-setinvisible
+        - libsdisguises.disguise.parrot.-setinvisible
         - libsdisguises.disguise.villager.-setinvisible
         - libsdisguises.disguise.witch.-setinvisible
         - libsdisguises.disguise.wither.-setinvisible
