--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -14002,7 +14002,7 @@ users:
       name: B2bsquared
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - deadshot
+    - spidermanmilesmorales
     options:
       name: Polo_RalphAdam
     permissions:
@@ -20498,7 +20498,7 @@ users:
       name: laxbro1
   eac8f3fb-a0c2-45d4-964b-65273c31e34a:
     group:
-    - blueranger
+    - spidermanpeterparker
     options:
       name: Warrior89
   ead1cabc-9662-450f-a3f4-a604a1b94070:
