--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -880,8 +880,8 @@ v2-logout:
     group: default
     world: greenfield
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
-    world: overvoid
-    group: overvoid
+    world: greenfield
+    group: default
   f310e030-27e8-4f04-b99e-551f89f2d2d4:
     group: spawn
     world: spawn
