--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8831,6 +8831,7 @@ groups:
         - ch.alias.haste4
         - ch.alias.lightning
         - ch.alias.ma
+        - ch.alias.modifyspeed
   rmika:
     inheritance:
     - commonherotraits
