--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8829,7 +8829,7 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
-        - ch.alias.lightning
+        - essentials.lightning
         - ch.alias.ma
   rmika:
     inheritance:
