--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,6 +3,21 @@ groups:
     inheritance:
     - commonherotraits
     options:
+      prefix: '&2Ele&bc&etro'
+      suffix: '&b'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - essentials.fly
+        - magic.cast.electrictp
+        - magic.commands.cast
+  speeddemon:
+    inheritance:
+    - commonherotraits
+    options:
       prefix: '&6S&4pee&6d &6D&1emo&6n'
       suffix: '&b'
     worlds:
