--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11122,6 +11122,12 @@ groups:
         - ch.alias.run1
         - ch.alias.haste0
         - ch.alias.haste1
+        - magic.cast.emoksemocebadlofdnilb
+        - magic.cast.erifnrubnordlaucelbbub
+        - magic.cast.dlocdniwwolb
+        - magic.cast.etaercsnoisulli
+        - magic.cast.tekcajtiarts
+        - magic.commands.cast
   zeus:
     inheritance:
     - commonherotraits
