--- a/Citizens/saves.yml
+++ b/Citizens/saves.yml
@@ -24,7 +24,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,slimesize,age,gravity,poses
+    traitnames: slimesize,owner,spawned,poses,mounttrait,gravity,age,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -74,7 +74,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 28556dea-667d-409f-b2ff-fb4177a20ff2
-    traitnames: spawned,mounttrait,inventory,type,location,owner,slimesize,age,gravity,poses
+    traitnames: slimesize,owner,spawned,poses,mounttrait,gravity,age,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -113,7 +113,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,slimesize,age,gravity,poses
+    traitnames: owner,slimesize,spawned,poses,mounttrait,gravity,age,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -152,7 +152,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,slimesize,age,gravity,poses
+    traitnames: slimesize,owner,spawned,poses,mounttrait,gravity,age,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -184,7 +184,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,lookclose
+    traitnames: owner,spawned,mounttrait,gravity,lookclose,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -216,7 +216,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,lookclose
+    traitnames: owner,spawned,mounttrait,gravity,lookclose,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: RoboCode
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner
+    traitnames: owner,spawned,mounttrait,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -300,7 +300,7 @@ npc:
       owner:
         owner: God_Doesnt_Exist
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,equipment,lookclose
+    traitnames: owner,spawned,mounttrait,equipment,lookclose,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -357,7 +357,7 @@ npc:
       owner:
         owner: God_Doesnt_Exist
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,equipment,lookclose
+    traitnames: owner,spawned,mounttrait,equipment,lookclose,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -391,7 +391,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,poses
+    traitnames: owner,spawned,poses,mounttrait,gravity,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -425,7 +425,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 28556dea-667d-409f-b2ff-fb4177a20ff2
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,poses
+    traitnames: owner,spawned,poses,mounttrait,gravity,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -459,7 +459,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,poses
+    traitnames: owner,spawned,poses,mounttrait,gravity,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -493,7 +493,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,poses
+    traitnames: owner,spawned,poses,mounttrait,gravity,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -527,7 +527,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,poses
+    traitnames: owner,spawned,poses,mounttrait,gravity,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -561,7 +561,7 @@ npc:
       owner:
         owner: Tektronic
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: spawned,mounttrait,inventory,type,location,owner,gravity,poses
+    traitnames: owner,spawned,poses,mounttrait,gravity,type,inventory,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
