--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -16879,7 +16879,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - anarchy
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -24274,7 +24274,7 @@ users:
     - multiverse.access.policeoffice
   d577f172-c006-49eb-afe3-9cafe4117b92:
     group:
-    - nightwing
+    - mortal
     worlds:
       greenfield:
         permissions: []
