--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -2965,7 +2965,7 @@ v2-logout:
     group: default
     world: greenfield
   4ccbce1a-bc8f-4b0a-9072-9185b7b54e8d:
-    world: survival112
+    world: greenfield
     group: default
   48ae1382-b619-408e-b213-91be26f03945:
     group: default
