--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -58,11 +58,14 @@ players:
   f24d80bb-ec98-4d05-9282-914ec5f6f1a0:
     party: SKS
     rank: 5
-  4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    party: LIKYHGT
+  dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
+    party: Midori
     rank: 20
-  ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    party: LIKYHGT
+  05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
+    party: Midori
+    rank: 5
+  4ff867f5-6cab-413e-9fad-e4d77ca48778:
+    party: Enchantt
     rank: 5
 parties:
   anti:
@@ -99,6 +102,7 @@ parties:
     members:
     - 28556dea-667d-409f-b2ff-fb4177a20ff2
     - fbb8c072-4c4b-49c8-948b-26e8ad73099e
+    - 4ff867f5-6cab-413e-9fad-e4d77ca48778
   Chat:
     leader: 66edaf7d-94e7-44cf-9d99-34d3ad90594e
     members:
@@ -116,8 +120,8 @@ parties:
     - 5da26092-c807-4c9b-8d08-9523f74ddc97
     - 965ab7af-16e7-4dd0-b16c-f26d4300d23f
     home: policeoffice,-5,64,15,-359.4745,-2.8899791
-  LIKYHGT:
-    leader: 4ff867f5-6cab-413e-9fad-e4d77ca48778
+  Midori:
+    leader: dbb47887-bfbd-40e6-bfec-3d1053ea3aff
     members:
-    - 4ff867f5-6cab-413e-9fad-e4d77ca48778
-    - ca7e8de8-30f0-43c5-9701-982c10ea9459
+    - dbb47887-bfbd-40e6-bfec-3d1053ea3aff
+    - 05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85
