--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -48,7 +48,8 @@ v2-logout:
     group: default
     world: survival
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: survival112
+    world: greenfield
+    group: default
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
@@ -65,7 +66,7 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: survival112
+    world: survival112_nether
     group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
@@ -75,7 +76,7 @@ v2-logout:
     world: greenfield
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
     group: default
-    world: greenfield
+    world: gotham
   120b63c4-f322-44a8-a7b0-e15bf7d9f879:
     group: default
     world: greenfield
@@ -86,7 +87,7 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: survival112
+    world: greenfield
     group: default
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: policeoffice
@@ -95,8 +96,8 @@ v2-logout:
     world: greenfield
     group: default
   869b4227-b51e-452e-adbd-48759a6848dd:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: greenfield
     group: default
@@ -170,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: spleeflobby
-    group: spleeflobby
+    world: overvoid
+    group: overvoid
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
     world: greenfield
@@ -458,8 +459,8 @@ v2-logout:
     group: default
     world: greenfield
   b03318bc-895d-4d3f-8710-c991a38980b5:
-    group: parkourhub
-    world: parkourhub
+    group: checkers
+    world: checkers
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     world: survival112
     group: default
@@ -482,8 +483,8 @@ v2-logout:
     group: default
     world: greenfield
   1c575be8-a874-4b78-8307-3252351ad276:
-    group: plots
-    world: plots
+    group: default
+    world: greenfield
   0e42e474-1348-4fa8-97c6-cb39a9c0988f:
     group: default
     world: greenfield
@@ -830,7 +831,7 @@ v2-logout:
     world: survival
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group: default
-    world: survival112
+    world: greenfield
   257a45d6-7db0-492d-945c-a030f4985932:
     group: default
     world: greenfield
@@ -2864,7 +2865,7 @@ v2-logout:
     world: greenfield
   5dbf795f-6d7f-4b5f-bb44-2f79ee0547fe:
     group: default
-    world: survival112
+    world: greenfield
   b05a8adb-961b-46d1-b0bf-e012938bdca9:
     group: default
     world: greenfield
@@ -2965,7 +2966,7 @@ v2-logout:
     group: default
     world: greenfield
   4ccbce1a-bc8f-4b0a-9072-9185b7b54e8d:
-    world: greenfield
+    world: survival112
     group: default
   48ae1382-b619-408e-b213-91be26f03945:
     group: default
@@ -3014,7 +3015,7 @@ v2-logout:
     world: greenfield
   d0b35aee-f6af-44ff-84ed-6342e8370492:
     group: default
-    world: survival112
+    world: greenfield
   8843b9f7-88dc-4372-87dc-44d0eb797a20:
     group: default
     world: greenfield
@@ -3254,7 +3255,7 @@ v2-logout:
     world: greenfield
   6f228551-aff3-4d3d-b169-e5da6fa7f973:
     group: default
-    world: infinitycity
+    world: greenfield
   d23cf22d-ab7d-4d35-9543-f961b45fb4d4:
     group: default
     world: greenfield
@@ -3300,3 +3301,15 @@ v2-logout:
   4909491f-3d93-414e-9a92-cb0a7dd30b9f:
     group: default
     world: greenfield
+  00b42fc3-bd49-48da-903b-20f5a4dc7d2e:
+    group: default
+    world: greenfield
+  182fa38f-b321-44cf-ba16-fe70847459c3:
+    group: default
+    world: greenfield
+  b9f1a00e-0ecd-49e2-b2cd-5d7c4ec0d757:
+    group: default
+    world: greenfield
+  8e257f35-c1d2-4d89-9ce4-265955d60f78:
+    group: spawn
+    world: spawn
