--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3216,7 +3216,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&4A&7l&4p&7h&4a &4A&7r&4a&7c&4h&7n&4i&7d'
+      prefix: '&4A&0l&4p&0h&4a &4A&0r&4a&0c&4h&0n&4i&0d'
       suffix: '&4'
     worlds:
       survival112:
@@ -3561,8 +3561,8 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&4Harley &cThe &0Pir&fa&0te'
-      suffix: '&c'
+      prefix: '&2Midor&fi &cGu&9ri&2n'
+      suffix: '&2'
     worlds:
       survival112:
         permissions:
@@ -11175,8 +11175,8 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&2R&1a&2re&2Pepe'
-      suffix: '&2&o'
+      prefix: Mr. Ownerman
+      suffix: '&a&l&o'
   zoom:
     inheritance:
     - commonherotraits
@@ -11597,6 +11597,8 @@ groups:
         - ch.alias.run2
         - ch.alias.run1
         - ch.alias.run0
+    options:
+      prefix: '&0Clock&8Father'
   fanficc04a7d03584c4891a72cc97f76d81eb6:
     inheritance:
     - commonherotraits
@@ -11640,6 +11642,9 @@ groups:
     inheritance:
     - commonherotraits
   fanficc6cb4b81f1e7446db966e4ed7b45909d:
+    inheritance:
+    - commonherotraits
+  fanficc1265a020a964ed1975c73617ff76d84:
     inheritance:
     - commonherotraits
 schema-version: 1
@@ -12577,7 +12582,7 @@ users:
     - anarchy
   182fa38f-b321-44cf-ba16-fe70847459c3:
     group:
-    - artemis
+    - mortal
     options:
       name: BruhItzSteph
   18b721cb-1703-42dd-aaf2-1c1e39e9a110:
@@ -12769,7 +12774,7 @@ users:
       name: C00lCreeper426
   1c575be8-a874-4b78-8307-3252351ad276:
     group:
-    - ashprime
+    - starlord
     options:
       name: Leedler268
     worlds:
@@ -13257,7 +13262,7 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - mortal
+    - criminal
     options:
       name: BasicallyHark
       prefix: ''
@@ -14707,9 +14712,9 @@ users:
       name: SnapCat101
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
     group:
-    - supergirl
+    - officer
     options:
-      name: Taiyou_
+      name: BasicallySugar
     permissions:
     - is.officer
     - ch.alias.onduty
@@ -16812,7 +16817,7 @@ users:
       name: Astql
   869b4227-b51e-452e-adbd-48759a6848dd:
     group:
-    - mortal
+    - officer
     options:
       name: Grim765Man
     permissions:
@@ -16883,7 +16888,7 @@ users:
     options:
       name: God_Doesnt_Exist
       prefix: ''
-      suffix: '&a&l&o'
+      suffix: ''
     permissions:
     - -powers.onepunch
     - -powers.projectileinvulnerability
@@ -17006,7 +17011,7 @@ users:
       name: Doge21NinjaYT
   8ae48244-2f6d-4443-8b3e-90178f08e68d:
     group:
-    - killerfrostcaitlinsnow
+    - redlanternsupergirl
     options:
       name: _Blaidake_
   8b1ea473-d238-4ae6-b52e-b26e38302df9:
@@ -17224,7 +17229,7 @@ users:
       name: BlueTroubleGamer
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - atom
+    - flashwallywest
     options:
       name: X_Tony_X
     permissions:
@@ -19182,7 +19187,7 @@ users:
       name: brorsand123
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - spidermanmilesmorales
+    - beerus
     options:
       name: LordOfGallifrey
     permissions: []
@@ -19587,7 +19592,7 @@ users:
       name: matyou11
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     group:
-    - mortal
+    - beerus
     options:
       name: Minestock451
     permissions:
@@ -19936,6 +19941,7 @@ users:
       name: TaterBalls
       prefix: ''
     permissions:
+    - change.chat
     - chat.cooldown
     - -essentials.msg
     - is.secretary
@@ -20420,7 +20426,7 @@ users:
       name: Cyborg987
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - rocketraccoon
+    - venom
     options:
       name: Predamorph1519
     permissions:
@@ -20440,7 +20446,7 @@ users:
         permissions: []
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - staffsergeant
+    - wonderwoman
     options:
       name: WhatAreThose05
     permissions:
@@ -20722,10 +20728,11 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - mrmxyzptlk
+    - fanficeca9177a9ef24e69b1fc804d9d848303
     options:
       name: mrshiftyy
-    permissions: []
+    permissions:
+    - change.chat
     worlds:
       greenfield:
         permissions: []
@@ -21391,7 +21398,7 @@ users:
         permissions: []
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - fanficfbb8c0724c4b49c8948b26e8ad73099e
+    - mortal
     options:
       name: Rairakuu
     permissions:
@@ -21991,9 +21998,13 @@ users:
     - apollo
   f623605a-7c45-409a-8d9a-abd04d0b15e8:
     group:
-    - greenlanternhaljordan
+    - atom
     options:
       name: Podden
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
   3c069d3b-fe10-4917-9cb9-8d3c48b2a35b:
     group:
     - doctorstrange
@@ -23950,7 +23961,7 @@ users:
       name: BrodsterTV
   aa323969-2ccc-49c2-90ee-fbf60fa82ee6:
     group:
-    - spiderwomangwenstacy
+    - jinx
     worlds:
       greenfield:
         permissions: []
@@ -24129,7 +24140,7 @@ users:
       name: SkyGraft007
   5dbf795f-6d7f-4b5f-bb44-2f79ee0547fe:
     group:
-    - nickfury
+    - mortal
     options:
       name: pee19
   57b29f1f-dc6b-4d30-80ac-cf64c4df3428:
@@ -24137,7 +24148,7 @@ users:
     - is.officer
     - ch.alias.onduty
     group:
-    - officer
+    - reverseflashdanielwest
     options:
       name: Night_MCU
   647c8c25-fa7a-4539-b6f9-fe684bd6b840:
@@ -24220,9 +24231,13 @@ users:
       name: wizardturdlet
   6f228551-aff3-4d3d-b169-e5da6fa7f973:
     group:
-    - antman
+    - bobafett
     options:
       name: unwisesteye
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
   abc746e4-e1db-46be-8712-b07396b4427a:
     group:
     - antman
@@ -24240,7 +24255,7 @@ users:
       name: thebatmobil05
   c1265a02-0a96-4ed1-975c-73617ff76d84:
     group:
-    - zoom
+    - blacklanternmartianmanhunter
     options:
       name: syfy101
   c5ba3c77-97b4-4df2-83b5-7f3672f48fac:
@@ -24283,7 +24298,7 @@ users:
     permissions: []
   4909491f-3d93-414e-9a92-cb0a7dd30b9f:
     group:
-    - martianmanhunter
+    - blackracerwilliewalker
     options:
       name: cab0cab
     worlds:
@@ -24294,6 +24309,21 @@ users:
     - greenlanternhaljordan
     options:
       name: Swamp___Thing
+  b9f1a00e-0ecd-49e2-b2cd-5d7c4ec0d757:
+    group:
+    - flashbartallen
+    options:
+      name: ninjanoshow11
+  00b42fc3-bd49-48da-903b-20f5a4dc7d2e:
+    group:
+    - flashwallywest
+    options:
+      name: mcluigi4700
+  8e257f35-c1d2-4d89-9ce4-265955d60f78:
+    group:
+    - spiderman2099
+    options:
+      name: Greeney11
 worlds:
   checkers:
     inheritance:
