--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11122,6 +11122,7 @@ groups:
         - ch.alias.run1
         - ch.alias.haste0
         - ch.alias.haste1
+        - ch.alias.mrasid
         - magic.cast.emoksemocebadlofdnilb
         - magic.cast.erifnrubnordlaucelbbub
         - magic.cast.dlocdniwwolb
