--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6,7 +6,7 @@ groups:
       prefix: '&2Ele&bc&etro'
       suffix: '&b'
     worlds:
-      survival:
+      survival112:
         permissions:
         - ch.alias.run0
         - ch.alias.run1
@@ -21,7 +21,7 @@ groups:
       prefix: '&6S&4pee&6d &6D&1emo&6n'
       suffix: '&b'
     worlds:
-      survival:
+      survival112:
         permissions:
         - ch.alias.run0
         - ch.alias.run1
